--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,8 @@
 
 body {
   margin: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   font-family: var(--font-body);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
