--- a/frontend/src/pages/Home/home.module.css
+++ b/frontend/src/pages/Home/home.module.css
@@ -1,4 +1,24 @@
 .homeContainer {
     display: flex;
     height: 100%;
+    width: 100%;
+    flex-direction: column;
+}
+
+.bodyContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.loginBtn:hover {
+    transform: scale(1.1)
+}
+
+.signupBtn:hover {
+    transform: scale(1.1)
 }
