--- a/frontend/src/components/CardList/CardList.module.css
+++ b/frontend/src/components/CardList/CardList.module.css
@@ -3,5 +3,42 @@
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     text-align: center;
-    /* border: 1px solid seagreen; */
+    margin-right: 10px;
+    margin-top: 10px;
+    /* border: 10px solid seagreen; */
+}
+
+.cardListContainer {
+    margin-left: 21%;
+}
+
+.paginationsContainer {
+    display: flex;
+    justify-content: center;
+    padding: 100px;
+    width: 100%;
+}
+
+.inputContainer {
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 780px) {
+    .cardsContainer {
+        margin-left: 10px;
+    }
+
+    .cardListContainer {
+        margin-left: 0%;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .cardsContainer {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
 }
