--- a/frontend/src/components/MediaDetails/MediaDetails.module.css
+++ b/frontend/src/components/MediaDetails/MediaDetails.module.css
@@ -1,3 +1,6 @@
+.mediaDetials {
+    margin: 10px;
+}
 
 .detailsContainer {
     display: flex;
@@ -12,65 +15,67 @@
 .imgContainer {
     display: flex;
     margin: 10px;
+    width: 20vw;
 }
+
 .infoContainer {
     display: flex;
     flex-direction: column;
+    width: 100%;
     margin: 10px;
 }
 
 .movieImage {
-    height: 30vw;
+    height: 100%;
     min-width: 200px;
     min-height: 300px;
     border-radius: 15px;
+    box-shadow: 6px 6px 10px #000000;
 }
 
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
+.genreContainer {
+    display: flex;
+    gap: 50px;
 }
 
-.loader {
-  margin: 60px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(0,0,0, 0.2);
-  border-right: 1.1em solid rgba(0,0,0, 0.2);
-  border-bottom: 1.1em solid rgba(0,0,0, 0.2);
-  border-left: 1.1em solid #000000;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+.titleContainer {
+    display: flex;
+    width: 20vw;
+    justify-content: space-between;
+    margin-left: 20px;
 }
-@-webkit-keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+
+.backBtn {
+    margin-left: 20px;
 }
-@keyframes load8 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+
+.addListBtn {
+    transition: 200ms;
+}
+
+.addListBtn:hover {
+    transform: scale(1.1);
+}
+
+.genre {
+    cursor: pointer;
+    transition: 100ms;
+}
+
+.genre:hover {
+    transform: scale(1.1);
+}
+
+.toastHeader {
+    color: black;
+}
+
+@media only screen and (max-width: 1024px) {
+    .detailsBodyContainer {
+        flex-direction: column;
+    }
+
+    .detailsContainer {
+        justify-content: center;
+    }
 }
