added popup modal

--- a/frontend/src/pages/Account/Account.module.css
+++ b/frontend/src/pages/Account/Account.module.css
@@ -4,3 +4,13 @@
     flex-direction: column;
     margin: 10px;
 }
+
+.accountHeader {
+    display: flex;
+    justify-content: space-between;
+}
+
+.createListBtnContainer {
+    display: flex;
+    padding: 10px;
+}
